<resources>
    <string name="app_name">Trippin Business</string>
    <string name="splash_name">Trippin \n Business</string>
    <string name="card_text">Hi <b>there</b>, \n\nWe heard you are trying to boost your online presence. Why don\'t you try us. We help businesses like you to boost there online presence. <b>SignUp</b> now to get listed in the best tourist places to try in the city. Hope you will love it. \n\nLove From <b>Trippin</b> </string>
    <string name="get_started">Get Started</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="mobileno">Mobile No</string>
    <string name="signup_privacy">You agree to our Terms of Service Privacy Policy Content Policy</string>
    <string name="get_started_go">Let\'s Get Started!</string>
    <string name="business_name">Business Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="signup_now">Signup Now</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="privacy">By continuing, you agree to our \n Terms of Service, Privacy Policy, Content Policy</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_now">Login Now</string>
    <string name="login_here">Login Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="goto_login_and_signup">Goto Login And Signup</string>
    <string name="get_registerd">Get Registerd</string>
    <string name="hotel">Hotel</string>
    <string name="restaurant">Restaurant</string>
    <string name="shops">Shops</string>
    <string name="snacks">Snacks</string>
    <string name="tourist_spots">Tourist Spots</string>
    <string name="others">Others</string>
    <string name="specify_other">Specify Other</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="choose_business_type">Choose Business Type</string>
    <string name="cancel_type">Cancel Type</string>
    <string name="field_required">This Field is Required</string>
    <string name="password_limit">Password must be minimum 8 characters</string>
    <string name="page">Page</string>
    <string name="review">Review</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload_image">Upload Image</string>
    <string name="reviews">Reviews</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="update_profile_image">Update Profile Image</string>
    <string name="add_your_description_here">Add Your Description Here....</string>
    <string name="logout">Logout</string>
</resources>